finished first and second sections

--- a/main.html
+++ b/main.html
@@ -11,20 +11,32 @@
 
 <div class = "section1">
 <div class = "header">
-    <img src="face.png" alt="AJs Face">
+    <h2>Header Logo</h2>
     <ul class="right-header-links">
-        <li><a href = "https://www.linkedin.com/in/aj-caesar/">LinkedIn</a></li>
-        <li><a href = "https://github.com/ajcaesar">GitHub</a></li>
+        <li><a href = "https://www.linkedin.com/in/aj-caesar/" target="_blank">LinkedIn</a></li>
+        <li><a href = "https://github.com/ajcaesar" target="_blank">GitHub</a></li>
         <li><a href = "#about-me">About Me</a></li>
     </ul>
 </div>
 <div class = "second-layer">
 <div class = "text-leftside">
-    <h1 class = "title1">AJ tries to be pretty awesome</h1>
+    <h1 class = "title1">This website is awesome</h1>
     <p>This website has some subtext here under the main title. IT's a smaleler font and the color is lower contrast</p>
-    <br> <button>sign up for blog</button>
+    <br> <button>Sign up</button>
 </div>
-<img src = "basic-ibkr.png" alt = "ibkr logo"> 
+<img src = "basic-gray-background.png" alt = "placeholder image"> 
+</div>
+</div>
+
+<div class = "section2"> 
+<h3 class = "info">Some random information</h3>
+<div class = "boxes">
+<ul class = "imglist">
+<li><div class = "rectangle"></div>Text below image 1</li>
+<li><div class = "rectangle"></div>Text below image 2</li>
+<li><div class = "rectangle"></div>Text below image 3</li>
+<li><div class = "rectangle"></div>Text below image 4</li>
+</ul>
 </div>
 </div>
 
