finished core website

--- a/main.html
+++ b/main.html
@@ -40,6 +40,11 @@
 </div>
 </div>
 
-    
+<div class = "section3"> 
+<div class = "JS">
+<h1 class = "quote">too much praise can turn a fellow's head if he doesn't watch his step</h1>
+<h2 class = "citation">- Jimmy Stewart</h2>
+</div>
+</div>
 </body>
 </html>
